# BudgetTracker

./: .env.example  .gitignore  BudgetTracker.gs  BudgetTrackerPrototype.xlsx  README.md  SECURITY.md  TEMP.MD  UPDATE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json
backend/app/: config.py  main.py
backend/budget_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_balance_and_softdelete.py  test_budgets.py  test_categories_api.py  test_change_username.py  test_currency_mode.py  test_currency_mode_api.py  test_daily_summary.py  test_decimal_literal_safety_net.py  test_default_source_preference.py  test_financial_logging.py  test_fx_transfers.py  test_google_sheets.py  test_intent_item_normalization.py  test_intent_prompts.py  test_llm_gemini.py  test_llm_openrouter.py  test_parse.py  test_projection.py  test_rate_limit.py  test_security_and_oauth.py  test_settings_track_as_other.py  test_stats_currency.py  test_stats_exclude_untracked.py  test_subscription_callbacks.py  test_subscription_delete.py  test_subscriptions.py  test_telegram_credit_disambiguation.py  test_telegram_edit_callbacks.py  test_telegram_link.py  test_telegram_manage.py  test_time_and_transfer_defaults.py  test_transactions_list_api.py  test_transfer_category_and_source_prompt.py  test_transfer_category_mapping.py  test_untrackable.py  test_usd_and_monthly_breakdown.py  test_weekly_report.py
(+118 files in other folders)
